Adding content to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>My Protfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="home">
+            <h2>Welcome to My Website</h2>
+            <p>I am Aakash</p>
+        </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I am an MCA student currently studying in Graphic Era Hill University</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Your Name | <a href="mailto:your@email.com">aakashSagar360@email.com</a></p>
+    </footer>
 </body>
 </html>
