--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name | <a href="mailto:your@email.com">aakashSagar360@email.com</a></p>
+        <p>&copy; 2024 Aakash Sagar | <a href="mailto:your@email.com">aakashSagar360@email.com</a></p>
     </footer>
 </body>
 </html>
