html and css progress

--- a/index.html
+++ b/index.html
@@ -3,27 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>My Protfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav>
+                <img src="images/logo.png" alt="logo" class="logo">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="header-text">
+                <p>An MCA Student</p>
+                <h1>Hi, I'm <span>Aakash</span> <br> from Nainital</h1>
+            </div>
+        </div>
     </header>
     <main>
-        <section id="home">
-            <h2>Welcome to My Website</h2>
-            <p>I am Aakash</p>
-        </section>
+        <!-- About me  -->
         <section id="about">
-            <h2>About Me</h2>
-            <p>I am an MCA student currently studying in Graphic Era Hill University</p>
-        </section>
+            <div class="container">
+                <div class="row">
+                    <div class="about-col-1">
+                        <img src="images/user (1).png" alt="myphoto">
+                    </div>
+                    <div class="about-col-2">
+                        <h1 class="sub-title">About Me</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsa neque, sint quas pariatur deleniti perspiciatis aliquid commodi illum assumenda omnis voluptates reprehenderit unde sed consequuntur quia animi accusantium at.</p>
+                    </div>
+                </div>
+            </div>
+          </section>
     </main>
     <footer>
         <p>&copy; 2024 Aakash Sagar | <a href="mailto:your@email.com">aakashSagar360@email.com</a></p>
