--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c8decf2c48.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -35,13 +36,77 @@
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsa neque, sint quas pariatur deleniti perspiciatis aliquid commodi illum assumenda omnis voluptates reprehenderit unde sed consequuntur quia animi accusantium at.</p>
+                        <div class="tab-titles">
+                            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                            <p class="tab-links" onclick="opentab('education')">Education</p>
+                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                        </div>
+                        <div class="tab-contents active-tab" id="skills">
+                            <ul>
+                                <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
+                                <li><span>Competitve Coding</span><br>High logical comprehension</li>
+                                <li><span>Web Development</span><br>Web Development </li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="education">
+                            <ul>
+                                <li><span>2019 - 2022</span><br>BCA from Kumaun University, Nainital</li>
+                                <li><span>2022 - 2024</span><br>MCA from Graphic Era Hill University, Bhimtal</li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="experience">
+                            <ul>
+                                <li><span>Designing</span><br>Designing elements with Figma</li>
+                                <li><span>Full Stack</span><br>MERN Stack Development 01/July/23 to 01/Nov/23 ,MangoOranges Agritech India</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-          </section>
+            </section>
+            <!----------------- Services----------->
+            <div id="services">
+                <div class="container">
+                    <h1 class="sub-title">My Services</h1>
+                    <div class="services-list">
+                        <div>
+                            <i class="fa-solid fa-code"></i>
+                            <h2>Desgining</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit, illo reprehenderit minima sit iste tempore nam deserunt? Laudantium voluptatibus explicabo quos blanditiis iure quaerat a et vel vitae perspiciatis.</p>
+                            <a href="#">Learn more</a>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-clipboard"></i>
+                            <h2>Therapy</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit, illo reprehenderit minima sit iste tempore nam deserunt? Laudantium voluptatibus explicabo quos blanditiis iure quaerat a et vel vitae perspiciatis.</p>
+                            <a href="#">Learn more</a>
+                        </div>
+                        <div>
+                            <i class="fa-brands fa-app-store"></i>
+                            <h2>Desgining</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit, illo reprehenderit minima sit iste tempore nam deserunt? Laudantium voluptatibus explicabo quos blanditiis iure quaerat a et vel vitae perspiciatis.</p>
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
     <footer>
         <p>&copy; 2024 Aakash Sagar | <a href="mailto:your@email.com">aakashSagar360@email.com</a></p>
     </footer>
+    <script>
+        var tablinks = document.getElementsByClassName("tab-links");
+        var tabcontents = document.getElementsByClassName("tab-contents");
+        function opentab(tabname){
+            for(tablink of tablinks){
+                tablink.classList.remove("active-link");
+            }
+            for(tabcontent of tabcontents){
+                tabcontent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add("active-link");
+            document.getElementById(tabname).classList.add("active-tab");
+        }
+    </script>
 </body>
 </html>
