adding the work section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,23 @@
                     </div>
                 </div>
             </div>
+            <!-- --------------portflio------------ -->
+            <div id="portfolio">
+                <div class="container">
+                    <h1 class="sub-title">My Work</h1>
+                    <div class="work-list">
+                        <div class="work">
+                            <img src="images/work-1.png" alt="workspace image">
+                        </div>
+                        <div class="work">
+                            <img src="images/work-2.png" alt="workspace image">
+                        </div>
+                        <div class="work">
+                            <img src="images/work-3.png" alt="workspace image">
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
     <footer>
         <p>&copy; 2024 Aakash Sagar | <a href="mailto:your@email.com">aakashSagar360@email.com</a></p>
