--- a/index.html
+++ b/index.html
@@ -98,12 +98,27 @@
                     <div class="work-list">
                         <div class="work">
                             <img src="images/work-1.png" alt="workspace image">
+                            <div class="layer">
+                                <h3>Project 1</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi sunt delectus tenetur non esse saepe ipsam dolore itaque quo optio, neque harum dignissimos dolorum necessitatibus repellendus voluptates eveniet. Sed?</p>
+                                <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            </div>
                         </div>
                         <div class="work">
                             <img src="images/work-2.png" alt="workspace image">
+                            <div class="layer">
+                                <h3>Project 2</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi sunt delectus tenetur non esse saepe ipsam dolore itaque quo optio, neque harum dignissimos dolorum necessitatibus repellendus voluptates eveniet. Sed?</p>
+                                <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            </div>
                         </div>
                         <div class="work">
                             <img src="images/work-3.png" alt="workspace image">
+                            <div class="layer">
+                                <h3>Project 3</h3>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi sunt delectus tenetur non esse saepe ipsam dolore itaque quo optio, neque harum dignissimos dolorum necessitatibus repellendus voluptates eveniet. Sed?</p>
+                                <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
