Completed My Work Section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="layer">
                                 <h3>Project 1</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi sunt delectus tenetur non esse saepe ipsam dolore itaque quo optio, neque harum dignissimos dolorum necessitatibus repellendus voluptates eveniet. Sed?</p>
-                                <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                         <div class="work">
@@ -109,7 +109,7 @@
                             <div class="layer">
                                 <h3>Project 2</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi sunt delectus tenetur non esse saepe ipsam dolore itaque quo optio, neque harum dignissimos dolorum necessitatibus repellendus voluptates eveniet. Sed?</p>
-                                <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                         <div class="work">
@@ -117,10 +117,11 @@
                             <div class="layer">
                                 <h3>Project 3</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi sunt delectus tenetur non esse saepe ipsam dolore itaque quo optio, neque harum dignissimos dolorum necessitatibus repellendus voluptates eveniet. Sed?</p>
-                                <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                     </div>
+                    <a href="#" class="btn">See more</a>
                 </div>
             </div>
     </main>
