--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Contact</a></li>
+                    <i class="fa-solid fa-xmark"></i>
                 </ul>
+                <i class="fa-solid fa-bars"></i>
             </nav>
             <div class="header-text">
                 <p>An MCA Student</p>
@@ -124,9 +126,37 @@
                     <a href="#" class="btn">See more</a>
                 </div>
             </div>
+            <!-- -------------------------------contact--------------------- -->
+            <div id="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="contact-left">
+                            <h1 class="sub-title">Contact Me</h1>
+                            <p><i class="fa-solid fa-envelope"></i> rahulsagar460@gmail.com</p>
+                            <p><i class="fa-solid fa-phone"></i> 9410776480</p>
+                            <div class="social-icons">
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            </div>
+                            <a  href="images/my-cv.pdf" class="btn btn2" download>Download CV</a>
+                        </div>
+                        <div class="contact-right">
+                            <form action="">
+                                <input type="text" name="Name" placeholder="Your Name" required>
+                                <input type="email" name="email" placeholder="Your Email" required>
+                                <textarea name="Message"  rows="6" placeholder="Your Message"></textarea>
+                                <button type="submit" class="btn btn2">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
     <footer>
-        <p>&copy; 2024 Aakash Sagar | <a href="mailto:your@email.com">aakashSagar360@email.com</a></p>
+        <div class="copyright">
+            <p>&copy; 2024 Mystic. Made with <i class="fa-solid fa-heart"></i> by Aakash | <a href="mailto:your@email.com">aakashsagar360@gmail.com</a></p>
+        </div>
     </footer>
 </body>
 </html>
