added mediastyles for smaller screen devices

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <script src="https://kit.fontawesome.com/c8decf2c48.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header id= "header">
         <div class="container">
             <nav>
                 <img src="images/logo.png" alt="logo" class="logo">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <i class="fa-solid fa-xmark"></i>
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
                 <p>An MCA Student</p>
