--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
                             <p><i class="fa-solid fa-envelope"></i> rahulsagar460@gmail.com</p>
                             <p><i class="fa-solid fa-phone"></i> 9410776480</p>
                             <div class="social-icons">
-                                <a href=""><i class="fa-brands fa-facebook"></i></a>
-                                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.facebook.com/aakash.sagar.10297/"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/mystic_aakash/"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/mysticaakash/"><i class="fa-brands fa-linkedin"></i></a>
                             </div>
                             <a  href="images/my-cv.pdf" class="btn btn2" download>Download CV</a>
                         </div>
