Updated links and added projects

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <!-- <li><a href="#services">Services</a></li> -->
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
@@ -44,7 +44,7 @@
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                             <p class="tab-links" onclick="opentab('education')">Education</p>
-                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                            <!-- <p class="tab-links" onclick="opentab('experience')">Experience</p> -->
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
@@ -59,12 +59,12 @@
                                 <li><span>2022 - 2024</span><br>MCA from Graphic Era Hill University, Bhimtal</li>
                             </ul>
                         </div>
-                        <div class="tab-contents" id="experience">
+                        <!-- <div class="tab-contents" id="experience">
                             <ul>
                                 <li><span>Designing</span><br>Designing elements with Figma</li>
                                 <li><span>Full Stack</span><br>MERN Stack Development 01/July/23 to 01/Nov/23 ,MangoOranges Agritech India</li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -105,23 +105,23 @@
                             <div class="layer">
                                 <h3>Auth App</h3>
                                 <p>Auth App, Authentication app built on Android Studio with Firebase as Backend</p>
-                                <a href="https://github.com/MysticAakash07/Auth-App"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <a href="https://github.com/MysticAakash07/Auth-App" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                         <div class="work">
                             <img src="images/work-2.png" alt="workspace image">
                             <div class="layer">
-                                <h3>Project 2</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi sunt delectus tenetur non esse saepe ipsam dolore itaque quo optio, neque harum dignissimos dolorum necessitatibus repellendus voluptates eveniet. Sed?</p>
-                                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <h3>Cat-Dog-Image-Classifier-using-CNN</h3>
+                                <p>A convolutional neural network (CNN) for classifying images of cats and dogs</p>
+                                <a href="https://github.com/MysticAakash07/Cat-Dog-Image-Classifier-using-CNN" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                         <div class="work">
                             <img src="images/work-3.png" alt="workspace image">
                             <div class="layer">
-                                <h3>Project 3</h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi sunt delectus tenetur non esse saepe ipsam dolore itaque quo optio, neque harum dignissimos dolorum necessitatibus repellendus voluptates eveniet. Sed?</p>
-                                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <h3>To-Do-List-React</h3>
+                                <p>A user-friendly to-do list application for managing tasks efficiently</p>
+                                <a href="https://github.com/MysticAakash07/to-do-list-react-v2" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                     </div>
@@ -137,9 +137,9 @@
                             <p><i class="fa-solid fa-envelope"></i> rahulsagar460@gmail.com</p>
                             <p><i class="fa-solid fa-phone"></i> 9410776480</p>
                             <div class="social-icons">
-                                <a href="https://www.facebook.com/aakash.sagar.10297/"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/mystic_aakash/"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="https://www.linkedin.com/in/mysticaakash/"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.facebook.com/aakash.sagar.10297/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/mystic_aakash/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/mysticaakash/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                             </div>
                             <a  href="images/my-cv.pdf" class="btn btn2" download>Download CV</a>
                         </div>
