--- a/index.html
+++ b/index.html
@@ -48,15 +48,18 @@
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
-                                <li><span>Competitve Coding</span><br>High logical comprehension</li>
-                                <li><span>Web Development</span><br>Web Development </li>
+                                <li><span>C/C++ Programming </span></li>
+                                <li><span>Figma Designing </span></li>
+                                <li><span>Competitve Coding</span></li>
+                                <li><span>Web Development</span></li>
+                                <li><span>Java Programming</span></li>
+                                <li><span>Python</span></li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>2019 - 2022</span><br>BCA from Kumaun University, Nainital</li>
-                                <li><span>2022 - 2024</span><br>MCA from Graphic Era Hill University, Bhimtal</li>
+                                <li><span>2019 - 2022</span><br>BCA from Kumaun University, Nainital &nbsp;<span>74.03%</span></li>
+                                <li><span>2022 - 2024</span><br>MCA from Graphic Era Hill University, Bhimtal &nbsp; <span>8.95 CGPA</span></li>
                             </ul>
                         </div>
                         <!-- <div class="tab-contents" id="experience">
