--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <!-- <li><a href="#services">Services</a></li> -->
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -98,10 +98,10 @@
                     </div>
                 </div>
             </div> -->
-            <!-- --------------portflio------------ -->
-            <div id="portfolio">
+            <!-- --------------projects------------ -->
+            <div id="projects">
                 <div class="container">
-                    <h1 class="sub-title">My Work</h1>
+                    <h1 class="sub-title">My Projects</h1>
                     <div class="work-list">
                         <div class="work">
                             <img src="images/work-1.png" alt="workspace image">
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="btn">See more</a>
+                    <a href="https://github.com/MysticAakash07?tab=repositories" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <!-- -------------------------------contact--------------------- -->
