--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/user (1).png" alt="myphoto">
+                        <img src="images/user.png" alt="myphoto">
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
@@ -44,16 +44,19 @@
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                             <p class="tab-links" onclick="opentab('education')">Education</p>
-                            <!-- <p class="tab-links" onclick="opentab('experience')">Experience</p> -->
+                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>C/C++ Programming </span></li>
-                                <li><span>Figma Designing </span></li>
-                                <li><span>Competitve Coding</span></li>
-                                <li><span>Web Development</span></li>
-                                <li><span>Java Programming</span></li>
-                                <li><span>Python</span></li>
+                                <li><span>Programming Languages </span> — C/C++, Java, Python</li>
+                                <li><span>Web Technologies </span> — HTML, CSS, JavaScript, Bootstrap, EJS</li>
+                                <li><span>Frameworks & Libraries </span> — React, Express, RESTful Routing</li>
+                                <li><span>Databases </span> — MongoDB, Firebase</li>
+                                <li><span>Machine Learning </span> — TensorFlow, Keras, Pandas, Matplotlib</li>
+                                <li><span>Tools & Technologies </span> — Git, GitHub, Streamlit, Mongoose</li>
+                                <li><span>Design </span> — Figma</li>
+                                <li><span>Mobile App Development </span> — Android Studio</li>
+                                <li><span>Data Tools </span> — Excel, PowerPoint</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
@@ -62,12 +65,16 @@
                                 <li><span>2022 - 2024</span><br>MCA from Graphic Era Hill University, Bhimtal &nbsp; <span>8.95 CGPA</span></li>
                             </ul>
                         </div>
-                        <!-- <div class="tab-contents" id="experience">
+                        <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>Designing</span><br>Designing elements with Figma</li>
-                                <li><span>Full Stack</span><br>MERN Stack Development 01/July/23 to 01/Nov/23 ,MangoOranges Agritech India</li>
+                                <li><span>Software Developer Intern</span>, MangosOrange Services Pvt. Ltd.<span> (06/2023 – 11/2023)</span></li>
+                                <ul class="inner-list">
+                                    <li>Researched and documented e-learning platform design.</li>
+                                    <li>Integrated government schemes and optimized content structure.</li>
+                                    <li>Utilized GitHub and Figma to improve workflow efficiency by 30%.</li>
+                                </ul>
                             </ul>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -106,25 +113,25 @@
                         <div class="work">
                             <img src="images/work-1.png" alt="workspace image">
                             <div class="layer">
-                                <h3>Auth App</h3>
-                                <p>Auth App, Authentication app built on Android Studio with Firebase as Backend</p>
-                                <a href="https://github.com/MysticAakash07/Auth-App" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <h3>YelpCamp</h3>
+                                <p>Full-stack web app for managing campgrounds with features like authentication, mapping, and image uploads.</p>
+                                <a href="https://github.com/MysticAakash07/YelpCamp" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                         <div class="work">
                             <img src="images/work-2.png" alt="workspace image">
                             <div class="layer">
-                                <h3>Cat-Dog-Image-Classifier-using-CNN</h3>
-                                <p>A convolutional neural network (CNN) for classifying images of cats and dogs</p>
-                                <a href="https://github.com/MysticAakash07/Cat-Dog-Image-Classifier-using-CNN" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <h3>Auth App</h3>
+                                <p>Android authentication app with Firebase backend and interactive UI.</p>
+                                <a href="https://github.com/MysticAakash07/Auth-App" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                         <div class="work">
                             <img src="images/work-3.png" alt="workspace image">
                             <div class="layer">
-                                <h3>To-Do-List-React</h3>
-                                <p>A user-friendly to-do list application for managing tasks efficiently</p>
-                                <a href="https://github.com/MysticAakash07/to-do-list-react-v2" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <h3>Cat-Dog Classifier</h3>
+                                <p>Machine learning model with 73% accuracy, integrated with Streamlit for image predictions.</p>
+                                <a href="https://github.com/MysticAakash07/Cat-Dog-Image-Classifier-using-CNN" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                     </div>
@@ -143,6 +150,8 @@
                                 <a href="https://www.facebook.com/aakash.sagar.10297/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                                 <a href="https://www.instagram.com/mystic_aakash/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="https://www.linkedin.com/in/mysticaakash/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://leetcode.com/MysticAakash07/" target="_blank"><i class="fa-solid fa-code"></i></a>
+                                <a href="https://github.com/MysticAakash07" target="_blank"><i class="fa-brands fa-github"></i></a>
                             </div>
                             <a  href="images/my-cv.pdf" class="btn btn2" download>Download CV</a>
                         </div>
