--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                     <h1 class="sub-title">My Projects</h1>
                     <div class="work-list">
                         <div class="work">
-                            <img src="images/work-1.png" alt="workspace image">
+                            <img src="images/YelpCamp.png" alt="workspace image">
                             <div class="layer">
                                 <h3>YelpCamp</h3>
                                 <p>Full-stack web app for managing campgrounds with features like authentication, mapping, and image uploads.</p>
-                                <a href="https://github.com/MysticAakash07/YelpCamp" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <a href="https://yelpcamp-8uao.onrender.com/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                         <div class="work">
@@ -127,11 +127,11 @@
                             </div>
                         </div>
                         <div class="work">
-                            <img src="images/work-3.png" alt="workspace image">
+                            <img src="images/Cat-Dog-CNN.png" alt="workspace image">
                             <div class="layer">
                                 <h3>Cat-Dog Classifier</h3>
                                 <p>Machine learning model with 73% accuracy, integrated with Streamlit for image predictions.</p>
-                                <a href="https://github.com/MysticAakash07/Cat-Dog-Image-Classifier-using-CNN" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <a href="https://huggingface.co/spaces/Mystic-Aakash/Cat-Dog-Image-Classifier-using-CNN" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                                 <a href="https://www.facebook.com/aakash.sagar.10297/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                                 <a href="https://www.instagram.com/mystic_aakash/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="https://www.linkedin.com/in/mysticaakash/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                                <a href="https://leetcode.com/MysticAakash07/" target="_blank"><i class="fa-solid fa-code"></i></a>
+                                <a href="https://leetcode.com/u/Mystic_Aakash/" target="_blank"><i class="fa-solid fa-code"></i></a>
                                 <a href="https://github.com/MysticAakash07" target="_blank"><i class="fa-brands fa-github"></i></a>
                             </div>
                             <a  href="images/my-cv.pdf" class="btn btn2" download>Download CV</a>
@@ -170,7 +170,7 @@
     </main>
     <footer>
         <div class="copyright">
-            <p>&copy; 2024 Mystic. Made with <i class="fa-solid fa-heart"></i> by Aakash | <a href="mailto:your@email.com">aakashsagar360@gmail.com</a></p>
+            <p>&copy; 2024 Mystic. Made with <i class="fa-solid fa-heart"></i> by Aakash | <a href="mailto:your@email.com">rahulsagar460@gmail.com</a></p>
         </div>
     </footer>
 
